# rust_video

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  docker-compose.yml  quick-start.sh
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  rust.yml
frontend/: env.d.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/assets/: main.css
frontend/src/components/: ThemeSwitcher.vue
frontend/src/components/Logo/: AnimatedAvatar.vue
frontend/src/components/Parser/: ParserInput.vue  ParserResult.vue
frontend/src/components/Toast/: ToastContainer.vue  ToastItem.vue
frontend/src/composables/: useToast.ts
frontend/src/plugins/: vuetify.ts
frontend/src/stores/: app.ts  theme.ts
frontend/src/styles/: base.scss  main.scss  variables.scss
frontend/src/styles/themes/: cyberpunk.scss  dark.scss  glass.scss  gradient.scss  grid.scss  index.scss  minimal.scss  professional.scss
frontend/src/utils/: download.ts
frontend/src/views/: HomeView.vue
release-package/: LICENSE  README.md  使用说明.txt
src/: main.rs  models.rs  server.rs  utils.rs
src/parser/: acfun.rs  bilibili.rs  doupai.rs  douyin.rs  haokan.rs  huoshan.rs  huya.rs  kuaishou.rs  lishipin.rs  lvzhou.rs  mod.rs  pipigaoxiao.rs  pipixia.rs  quanmin.rs  quanminkge.rs  redbook.rs  sixroom.rs  weibo.rs  weishi.rs  xigua.rs  xinpianchang.rs  zuiyou.rs
templates/: index.html
