[package]
name = "rust_video_parser"
version = "2.1.0"
edition = "2021"
authors = ["Rust Video Parser Team"]
description = "A powerful video parser with sci-fi particle effects, supporting 21 platforms with video proxy and download"

[[bin]]
name = "rust_video_parser"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

reqwest = { version = "0.11", features = ["json", "cookies"] }

async-trait = "0.1"

url = "2.5"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

scraper = "0.18"

regex = "1.10"

futures = "0.3"

anyhow = "1.0"
thiserror = "1.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

dotenvy = "0.15"

clap = { version = "4.4", features = ["derive"] }

rand = "0.8"

chrono = "0.4"

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
